<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/landingpageticketwave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/sfprobold"
        android:text="@string/ticketwave_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcometextlandingpage"
        android:layout_width="383dp"
        android:layout_height="148dp"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/sfprobold"
        android:text="@string/landing_page_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <ImageView
        android:id="@+id/cassano"
        android:layout_width="400dp"
        android:layout_height="420dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingpageticketwave"
        app:srcCompat="@drawable/noncassano"
        android:contentDescription="@string/landingimage" />

    <Button
        android:id="@+id/buttonlandingpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/getstarted_label"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cassano" />


</androidx.constraintlayout.widget.ConstraintLayout>