<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/colorTextLight"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sfprobold"
                    android:text="@string/city_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="35sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sfprobold"
                        android:text="@string/from"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/datesFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sfprobold"
                        android:text=""
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sfprobold"
                        android:text="@string/to"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/datesTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sfprobold"
                        android:text=""
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/explore_button"
                    android:tag="To define"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"

                    android:layout_marginVertical="16dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>