<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardElevation="8dp"
    android:layout_margin="10dp"
    android:checkable="false"
    android:clickable="true"
    android:focusable="true"
    android:hapticFeedbackEnabled="true"
    android:visibility="visible"
    app:cardBackgroundColor="@color/colorTextLight"
    app:cardCornerRadius="30dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/event_image"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:padding="7dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/eventi"
                    app:shapeAppearanceOverlay="@style/roundimageview">
                </com.google.android.material.imageview.ShapeableImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/event_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/sfprobold"
                        android:text="@string/event_name"
                        android:textColor="@color/colorAccentDark"
                        android:textSize="17sp"
                        tools:ignore="TextSizeCheck">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/event_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfprobold"
                        android:text="@string/date"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfprobold"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/event_location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfprobold"
                        android:text="@string/location"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/event_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/event_description_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfprobold"
                        android:text="@string/genere"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp">
                    </TextView>
                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp">
                    </TextView>
                </LinearLayout>

            </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
